--- a/contextualAnalysisForJimSentencesData.Rmd
+++ b/contextualAnalysisForJimSentencesData.Rmd
@@ -18,7 +18,7 @@ library(LDAvis)
 library(servr)
 
 mydb = dbConnect(MySQL(), user='root', password='', dbname='domainanalysis', host='localhost')
-subcases<-dbGetQuery(mydb, "SELECT * FROM `smartsignal_jim_allfields` where equipmentType='STEAM_TURBINE' LIMIT 2000")
+subcases<-dbGetQuery(mydb, "SELECT * FROM `smartsignal_jim_allfields` where equipmentType='WIND_TURBINE'")
 stopwordsList<-dbGetQuery(mydb, "SELECT stopword FROM `stopwordss`")
 domainWords<-dbGetQuery(mydb, "SELECT * FROM `domainwordss`")
 
@@ -43,6 +43,13 @@ txt <- gsub("'", "", txt)  # remove apostrophes
 finalTxtMat=getSentencesFromText(txt,domainWords)
 finalTxtMat[,3] <- gsub("[[:punct:]]", " ", finalTxtMat[,3])
 
+write.csv(finalTxtMat[,3],file="ST.csv")
+
+# connection = dbConnect(MySQL(), user='root', password='', dbname='test', host='localhost')
+# 
+# df=as.data.frame(finalTxtMat)
+# names(df)=c("caseId","sentenceId","sentence")
+# dbWriteTable(connection,"sentences",df[1:3,], field.types=c("caseId","sentenceId","sentence"),append = TRUE )
 
 ```
 now prepare the corpus
@@ -271,7 +278,7 @@ for(i in 1:NROW(entitySet))
 
 
 outputMatrix=removeNARowsFromMatrix(outputMatrix)
-write.csv(outputMatrix,"output_jim_STEAM_TURBINE.csv")
+write.csv(outputMatrix,"output_jim_GEN.csv")
 
 
 
@@ -675,6 +682,8 @@ getBigrams=function(tokens,tokens2,testList1,testList2)
       dd<- unlist(strsplit(b, "[[:space:]]+"))
       #cat(dd,"\n")
       #if(!(dd[1] %in% stop_words | dd[2] %in% stop_words))
+      ###We need to check if the two words come together. justg coming in the list 
+      ##is not appropriate
      if((dd[1] %in% testList1 & dd[2] %in% testList2))
       {
        # print("dsdsd")
@@ -724,12 +733,6 @@ getTrigrams=function(tokens,tokens2,tokens3,testList1,testList2,testList3)
   }
   return(finalTrigramWords)
 }
-
-
-
-
-
-
 
 
 ```
@@ -930,10 +933,11 @@ normalizePOSWordList=function(ngramWords,domainWords,wordFreq)
 Copied the code to find the sentences from the createSentencesFromParagraphs.Rmd file.
 
 ```{r}
+require("openNLP")
+  
 
 getSentencesFromText=function(txt,domainWords)
 {
-  require("openNLP")
   
   
   finalSentences=matrix(nrow=20000,ncol=3)
@@ -952,7 +956,8 @@ getSentencesFromText=function(txt,domainWords)
     {
       
       #print(s[a1][j])
-      rr=removeStopWordsFromSentence(s[a1],domainWords)
+      
+      rr=removeStopWordsFromSentence(s[a1],domainWords,0)
       if(stringr::str_length(rr)>5)
       {
         count=count+1
@@ -963,7 +968,7 @@ getSentencesFromText=function(txt,domainWords)
     }else{
       for(j in 1:len)
       {
-        rr=removeStopWordsFromSentence(s[a1][j],domainWords)
+        rr=removeStopWordsFromSentence(s[a1][j],domainWords,0)
         if(stringr::str_length(rr)>5)
         {
           count=count+1
@@ -979,11 +984,10 @@ getSentencesFromText=function(txt,domainWords)
   return(removeNARowsFromMatrix(finalSentences))
 }
 
-
-
-removeStopWordsFromSentence=function(sentence,domainWords)
+removeStopWordsFromSentence=function(sentence,domainWords,removeStopWords=1)
 {
-  return(sentence)
+  if(removeStopWords==0)
+    return(sentence)
   #sentence=txtCorpus[10]
   #domainWords=domainWords
   stop_words=getStopWordsList()
@@ -1032,7 +1036,6 @@ removeStopWordsFromSentence=function(sentence,domainWords)
     return("")
   
 }
-
 
 applyDomainWords=function(sentence,domainWords)
 {
